[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-service"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait            = "0.1"
futures                = "0.3"
libp2p                 = { workspace = true, features = ["ed25519"] }
libp2p-stream          = { workspace = true }
nomos-blend-message    = { workspace = true }
nomos-blend-network    = { workspace = true }
nomos-blend-scheduling = { workspace = true }
nomos-core             = { workspace = true }
nomos-libp2p           = { workspace = true, optional = true }
nomos-network          = { workspace = true }
nomos-utils            = { workspace = true, features = ["time"] }
overwatch              = { workspace = true }
rand                   = { workspace = true }
rand_chacha            = "0.3"
serde                  = { version = "1.0", features = ["derive"] }
serde_with             = { workspace = true }
services-utils         = { workspace = true }
tokio                  = { version = "1", features = ["macros", "sync"] }
tokio-stream           = "0.1"
tracing                = { workspace = true }

[dev-dependencies]
libp2p              = { workspace = true, features = ["plaintext", "tcp", "tokio", "yamux"] }
libp2p-swarm-test   = { version = "0.5.0", features = ["tokio"] }
nomos-blend-message = { workspace = true, features = ["unsafe-test-functions"] }
nomos-blend-network = { workspace = true, features = ["unsafe-test-functions"] }
test-log            = { version = "0.2.18", features = ["trace"] }

[features]
default = []
libp2p  = ["dep:nomos-libp2p", "nomos-network/libp2p"]
