[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-blend-service"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait            = "0.1"
fork_stream            = { workspace = true }
futures                = { default-features = false, version = "0.3" }
libp2p                 = { optional = true, workspace = true }
libp2p-stream          = { optional = true, workspace = true }
nomos-blend-message    = { workspace = true }
nomos-blend-network    = { workspace = true }
nomos-blend-scheduling = { workspace = true }
nomos-core             = { workspace = true }
nomos-libp2p           = { optional = true, workspace = true }
nomos-membership       = { workspace = true }
nomos-network          = { workspace = true }
nomos-utils            = { features = ["serde"], workspace = true }
overwatch              = { workspace = true }
rand                   = { workspace = true }
serde                  = { default-features = false, version = "1.0" }
serde_with             = { workspace = true }
services-utils         = { workspace = true }
thiserror              = { default-features = false, version = "1" }
tokio                  = { default-features = false, version = "1" }
tokio-stream           = { default-features = false, version = "0.1" }
tracing                = { workspace = true }

[dev-dependencies]
libp2p                 = { default-features = false, features = ["plaintext", "tcp", "yamux"], workspace = true }
libp2p-swarm-test      = { default-features = false, version = "0.5.0" }
nomos-blend-message    = { workspace = true }
nomos-blend-network    = { features = ["unsafe-test-functions"], workspace = true }
nomos-blend-scheduling = { workspace = true, features = ["unsafe-test-functions"] }
test-log               = { default-features = false, version = "0.2.18" }

[features]
default = []
libp2p  = ["dep:libp2p", "dep:libp2p-stream", "dep:nomos-libp2p", "nomos-network/libp2p"]
