[package]
edition = "2021"
license = { workspace = true }
name    = "key-management-system"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait   = "0.1"
bytes         = { workspace = true }
ed25519-dalek = { version = "2", features = ["serde", "zeroize"] }
log           = "0.4.22"
overwatch     = { workspace = true }
serde         = { version = "1", features = ["derive"] }
thiserror     = "2"
tokio         = { version = "1", features = ["macros"] }
tracing       = "0.1"
zeroize       = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand          = "0.8"

[features]
default = ["preload"]
preload = []
