[package]
edition = { workspace = true }
license = { workspace = true }
name    = "key-management-system"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait   = "0.1"
bytes         = { workspace = true }
ed25519-dalek = { default-features = false, features = ["serde", "zeroize"], version = "2" }
groth16       = { workspace = true }
log           = "0.4.22"
nomos-core    = { workspace = true }
overwatch     = { workspace = true }
serde         = { default-features = false, features = ["derive"], version = "1" }
thiserror     = { default-features = false, version = "2" }
tokio         = { default-features = false, version = "1" }
tracing       = { default-features = false, version = "0.1" }
zeroize       = { workspace = true }

[dev-dependencies]
ed25519-dalek = { default-features = false, features = ["rand_core"], version = "2" }
rand          = { features = ["getrandom"], workspace = true }
serde         = { default-features = false, features = ["std"], version = "1" }

[features]
default = ["preload"]
preload = []
