[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-membership"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait    = "0.1"
futures        = "0.3"
nomos-core     = { workspace = true }
nomos-sdp      = { workspace = true }
nomos-sdp-core = { workspace = true }
overwatch      = { workspace = true }
serde          = { version = "1.0", features = ["derive"] }
services-utils = { workspace = true }
thiserror      = "1"
tokio          = { version = "1", features = ["macros", "sync"] }
tokio-stream   = "0.1"
tracing        = { workspace = true, features = ["attributes"] }

[dev-dependencies]
multiaddr = "0.18"
