[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-membership"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
async-trait    = "0.1"
futures        = { default-features = false, version = "0.3" }
nomos-core     = { workspace = true }
nomos-sdp      = { workspace = true }
nomos-storage  = { workspace = true }
overwatch      = { workspace = true }
serde          = { default-features = false, version = "1.0" }
services-utils = { workspace = true }
thiserror      = "1"
tokio          = { default-features = false, version = "1" }
tokio-stream   = { default-features = false, version = "0.1" }
tracing        = { workspace = true }

[dev-dependencies]
ed25519-dalek = { default-features = false, version = "2.0.0" }
multiaddr     = { default-features = false, version = "0.18" }
